--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title style="img">Rohit Goud | Developer</title>
     <!-- add icon link -->
